src/TSCompiler.atg
$namespace=TSCompiler

#include "wchar.h"

COMPILER TSCompiler
  
/*--------------------------------------------------------------------------*/
CHARACTERS
  letter = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz".
  digit = "0123456789".
  hexdigit = digit + "ABCDEF".
  cr  = '\r'.
  lf  = '\n'.
  tab = '\t'.

TOKENS
  ident  = letter {letter | digit}.
  number = digit {digit}.
  hexnumber = "0x" hexdigit { hexdigit } .
  intent = tab .

COMMENTS FROM "/*" TO "*/" NESTED
COMMENTS FROM "//" TO lf		//win32: TO cr lf
COMMENTS FROM "##" TO lf		//win32: TO cr lf

IGNORE cr + lf + tab

/*------------------------------------------------------------------------*/

PRODUCTIONS

/*------------------------------------------------------------------------*/
VersionNum = number 	(. QString versNum( coco_qstring_create(t->val) ); .)
			{ 
			"." 		
			number 		(. versNum.append( coco_qstring_create(t->val) ); .)
			}			(. if (versNum != data->version() )
							{
								std::cout << "-- ERROR: Using false TSCompiler version" << std::endl;
								data->quit();
							}
						.)
			.

/*------------------------------------------------------------------------*/
String = '"' { ident | number } '"' .

/*------------------------------------------------------------------------*/
VariableDecl =  ( ident | String | number | hexnumber ) .

/*------------------------------------------------------------------------*/
ParameterDecl = "(" ( { ident ( "," | ")" ) } | ")" ) .

/*------------------------------------------------------------------------*/
//FunctionBody = {ident} .

/*------------------------------------------------------------------------*/
//FunctionDecl =  ParameterDecl "->" FunctionBody  "<-".

FunctionBody = ident { intent ident } .
FunctionDecl = ParameterDecl "->" FunctionBody .

/*------------------------------------------------------------------------*/
ObjectMemDecl = ident ":" ( ident | String ) .

/*------------------------------------------------------------------------*/
ObjectDecl = "$" { ObjectMemDecl } "$" .

/*------------------------------------------------------------------------*/
Object = ident "=" ( VariableDecl | FunctionDecl | ObjectDecl ) .

/*------------------------------------------------------------------------*/
TSCompiler
= "TrivialScript" VersionNum 
	{ Object } .

END TSCompiler.
